--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,20 @@ jobs:
     needs: build
     steps:
     - uses: actions/checkout@v4
+    - name: Run Terraform
+      run: |
+        set -e
+        cd terraform
+        terraform init -input=false
+        terraform apply -input=false -auto-approve
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+
+
+    
     - name: Add /usr/local/bin to PATH
       run: |
         export PATH="/usr/local/bin:$PATH"
@@ -44,15 +58,88 @@ jobs:
     - name: Checkout código
       uses: actions/checkout@v2
     
-    - name: Azure CLI script
-      uses: azure/cli@v2
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v1
       with:
-        azcliversion: latest
-        inlineScript: |
-          az aks install-cli
-          az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
-          az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
-          kubectl apply -f terraform/k8s/api-deployment.yml  --validate=false  
-          sleep 30s && kubectl get svc
+        version: 'latest'
+
+    - name: Set up Helm
+      uses: azure/setup-helm@v1
+      with:
+        version: 'latest'
+
+    - name: Install NGINX Ingress Controller
+      run: |
+        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+        helm repo update
+        helm install ingress-nginx ingress-nginx/ingress-nginx
+
+    - name: Install cert-manager
+      run: |
+        kubectl apply --validate=false -f https://github.com/jetstack/cert-manager/releases/download/v1.10.0/cert-manager.yaml
+
+    - name: Create ClusterIssuer
+      run: |
+        cat <<EOF | kubectl apply -f -
+        apiVersion: cert-manager.io/v1
+        kind: ClusterIssuer
+        metadata:
+          name: letsencrypt-prod
+        spec:
+          acme:
+            server: https://acme-v02.api.letsencrypt.org/directory
+            email: montoyita41@hotmail.com
+            privateKeySecretRef:
+              name: letsencrypt-prod
+            solvers:
+            - http01:
+                ingress:
+                  class: nginx
+        EOF
+
+    - name: Deploy Application
+      run: |
+        kubectl apply -f terraform/k8s/api-deployment.yaml
+
+    - name: Wait for LoadBalancer IP
+      run: |
+        sleep 60
+        EXTERNAL_IP=""
+        while [ -z "$EXTERNAL_IP" ]; do
+          echo "Waiting for end point..."
+          EXTERNAL_IP=$(kubectl get svc my-web-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          [ -z "$EXTERNAL_IP" ] && sleep 10
+        done
+        echo "Service External IP: $EXTERNAL_IP"
+        echo "EXTERNAL_IP=$EXTERNAL_IP" >> $GITHUB_ENV
+
+    - name: Create Ingress
+      run: |
+        cat <<EOF | kubectl apply -f -
+        apiVersion: networking.k8s.io/v1
+        kind: Ingress
+        metadata:
+          name: my-web-ingress
+          annotations:
+            cert-manager.io/cluster-issuer: letsencrypt-prod
+            nginx.ingress.kubernetes.io/rewrite-target: /
+        spec:
+          tls:
+          - hosts:
+            - ${{ env.EXTERNAL_IP }}.nip.io
+            secretName: my-web-cert
+          rules:
+          - host: ${{ env.EXTERNAL_IP }}.nip.io
+            http:
+              paths:
+              - path: /
+                pathType: Prefix
+                backend:
+                  service:
+                    name: my-web-service
+                    port:
+                      number: 80
+        EOF
+
     
 
