--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,44 +34,45 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
+
     - uses: actions/checkout@v4
-  
+    
     - name: Add /usr/local/bin to PATH
       run: |
         export PATH="/usr/local/bin:$PATH"
-  
+    
     - uses: azure/login@v2
       with:
         creds: '{"clientId":"${{ secrets.ARM_CLIENT_ID }}","clientSecret":"${{ secrets.ARM_CLIENT_SECRET }}","subscriptionId":"${{ secrets.ARM_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.ARM_TENANT_ID }}"}'
-  
+    
     - name: Set up kubectl
       uses: azure/setup-kubectl@v1
       with:
         version: 'latest'
-  
+    
     - name: Set up Helm
       uses: azure/setup-helm@v1
       with:
         version: 'latest'
-  
+    
     - name: Create Helm repository config directory
       run: |
         mkdir -p ~/.config/helm/repositories/
         touch ~/.config/helm/repositories/repositories.yaml
-  
+    
     - name: Create ingress-nginx namespace
       run: |
         kubectl create namespace ingress-nginx || true
-  
-    - name: Update Helm repositories
+    
+    - name: Add ingress-nginx Helm repository
       run: |
         helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
         helm repo update
-  
+    
     - name: Install NGINX Ingress Controller
       run: |
-        helm upgrade --install ingress-nginx ingress-nginx/ingress-nginx \
-          --namespace ingress-nginx
+        helm install my-nginx-ingress ingress-nginx/ingress-nginx --namespace ingress-nginx
+
   
   
     - name: Install cert-manager
