--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
+
     - uses: actions/checkout@v4
     
     - name: Add /usr/local/bin to PATH
@@ -54,6 +55,12 @@ jobs:
       with:
         version: 'latest'
     
+    - name: Ensure Helm directories exist
+      run: |
+        mkdir -p ~/.config/helm/repositories/
+        mkdir -p ~/.cache/helm/repository/
+        touch ~/.config/helm/repositories/repositories.yaml
+    
     - name: Initialize Helm
       run: |
         helm repo add stable https://charts.helm.sh/stable
@@ -71,6 +78,7 @@ jobs:
     - name: Install NGINX Ingress Controller
       run: |
         helm install my-nginx-ingress ingress-nginx/ingress-nginx --namespace ingress-nginx
+
 
   
   
