--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,104 +50,25 @@ jobs:
       with:
         version: 'latest'
     
-    - name: Set up Helm
-      uses: azure/setup-helm@v1
+    - uses: actions/checkout@v4
+    - name: Run Terraform
+      run: |
+        set -e
+        cd terraform
+        terraform init -input=false
+        terraform apply -input=false -auto-approve
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+    - name: Azure CLI script
+      uses: azure/cli@v2
       with:
-        version: 'latest'
-    
-    - name: Ensure Helm directories exist
-      run: |
-        mkdir -p ~/.config/helm/repositories/
-        mkdir -p ~/.cache/helm/repository/
-        touch ~/.config/helm/repositories/repositories.yaml
-    
-    - name: Initialize Helm
-      run: |
-        helm repo add stable https://charts.helm.sh/stable
-        helm repo update
-    
-    - name: Create ingress-nginx namespace
-      run: |
-        kubectl create namespace ingress-nginx || true
-    
-    - name: Add ingress-nginx Helm repository
-      run: |
-        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-        helm repo update
-    
-    - name: Install NGINX Ingress Controller
-      run: |
-        helm install my-nginx-ingress ingress-nginx/ingress-nginx --namespace ingress-nginx
-
-
-  
-  
-    - name: Install cert-manager
-      run: |
-          kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.1/deploy/static/provider/cloud/deploy.yaml
-
-    - name: Create ClusterIssuer
-      run: |
-        cat <<EOF | kubectl apply -f -
-        apiVersion: cert-manager.io/v1
-        kind: ClusterIssuer
-        metadata:
-          name: letsencrypt-prod
-        spec:
-          acme:
-            server: https://acme-v02.api.letsencrypt.org/directory
-            email: montoyita41@hotmail.com
-            privateKeySecretRef:
-              name: letsencrypt-prod
-            solvers:
-            - http01:
-                ingress:
-                  class: nginx
-        EOF
-
-    - name: Deploy Application
-      run: |
-        kubectl apply -f terraform/k8s/api-deployment.yaml
-
-    - name: Wait for LoadBalancer IP
-      run: |
-        sleep 60
-        EXTERNAL_IP=""
-        while [ -z "$EXTERNAL_IP" ]; do
-          echo "Waiting for end point..."
-          EXTERNAL_IP=$(kubectl get svc my-web-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          [ -z "$EXTERNAL_IP" ] && sleep 10
-        done
-        echo "Service External IP: $EXTERNAL_IP"
-        echo "EXTERNAL_IP=$EXTERNAL_IP" >> $GITHUB_ENV
-
-    - name: Create Ingress
-      run: |
-        cat <<EOF | kubectl apply -f -
-        apiVersion: networking.k8s.io/v1
-        kind: Ingress
-        metadata:
-          name: my-web-ingress
-          annotations:
-            cert-manager.io/cluster-issuer: letsencrypt-prod
-            nginx.ingress.kubernetes.io/rewrite-target: /
-        spec:
-          tls:
-          - hosts:
-            - ${{ env.EXTERNAL_IP }}.nip.io
-            secretName: my-web-cert
-          rules:
-          - host: ${{ env.EXTERNAL_IP }}.nip.io
-            http:
-              paths:
-              - path: /
-                pathType: Prefix
-                backend:
-                  service:
-                    name: my-web-service
-                    port:
-                      number: 80
-        EOF
-
-    
+        azcliversion: latest
+        inlineScript: |
+          az aks install-cli
+          az account set --subscription 83c62e88-35c0-4f8d-8636-f21914cc6d80
+          az aks get-credentials --resource-group travel-rg --name kubernetes-travel --overwrite-existing
+          sleep 30s && kubectl get service 
 
